Family Bundle Integration WIP
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/FamilyBundle/Resources/translations/BusybeeFamilyBundle.en_GB.yml
+++ b/src/Busybee/People/FamilyBundle/Resources/translations/BusybeeFamilyBundle.en_GB.yml
@@ -19,15 +19,14 @@ family:
         careGivers: Care Givers
     label:
         name: Family Name
-        caregiver: Care Givers
         students: Children (Students)
+
         language:
             first: First language spoken by family.
             second: Second language spoken by family.
         house: House
     help:
         name: The family name, if left blank, will be a combination of the caregivers names.  The family name must be unique.
-        caregiver: Select care givers for the family.  All people in the database not listed as students can be selected. The order of contact is defined by the position in this list, the first appearing at the top of this list.
         students: Select existing students (children) to add to the family.  Changes are only saved when the family is saved.  Duplicates will be ignored.  Children can be members of multiple families. Students are sorted based on their first day at school.
         house: Adding the family to a house will populate student records automaically,
     placeholder:
@@ -41,16 +40,18 @@ family:
         remove: Remove Student
         edit: Edit Student
         title: 'Student: %name%'
+    caregivers:
+        help: Select care givers for the family.  All people in the database not listed as students can be selected. The order of contact is defined by the position in this list, the first appearing at the top of this list.
+        label: Care Givers
     caregiver:
         add: Add Care Giver
         remove: Remove Care Giver
         edit: Edit Care Giver
         title: 'Care Giver: %name%'
 students:
-    label:
-        person: Student Name
-    placeholder:
-        person: Select Student
+    person:
+        label: Student Name
+        placeholder: Select Student
 caregiver:
     label:
         newsletter: Receive Newsletter
