--- a/src/Busybee/Core/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
+++ b/src/Busybee/Core/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
@@ -205,3 +205,5 @@ google:
         user: 'Failed to retrieve a valid Google User: %message%'
     notAvailable: 'The user %name% (%email%) was not registered on the local system.'
 PasswordRequest: Password Request
+'<span class="halflings halflings-thumbs-down"></span>': '<span class="halflings halflings-thumbs-down"></span>'
+'<span class="halflings halflings-thumbs-up"></span>': '<span class="halflings halflings-thumbs-up"></span>'
