Pagination Choice/Sort translation domain setting.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/People/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -98,6 +98,12 @@ person:
         title: Edit Person
     import:
         title: Import People
+    pagination:
+        all: All People
+        student: Students Only
+        staff: Staff Only
+        contact: All except Staff and Students
+
 address:
     add: Add Address
     refresh: Refresh Address Lists
