--- a/src/Busybee/Facility/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/Facility/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -149,3 +149,13 @@ department:
             label: Staff Type
             placeholder: Select Staff Type
             help: Staff type is used to set system security.
+        remove:
+            button: Remove Staff
+            success: The staff member was removed.
+            failure: The staff member was not remomoved from the database.
+            missing: The staff member was not found to remove.
+institute:
+    space:
+        sort: Space / Campus Sort
+    campus:
+        sort: Campus / Space Sort
