--- a/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -81,6 +81,14 @@ menu:
             list: Manage Bundles
         user:
             management: Manage Users
+    setting:
+        schoolweek: Define School Week
+        schoolday:
+            open: School Open Time
+            begin: Teaching Start Time
+            finish: Teaching Finish Time
+            close: School Close Time
+        houses: Manage Houses
     family:
         manage: Manage Family       
     people:
@@ -102,6 +110,9 @@ menu:
         course: Courses
     Person: People
     system: Organise
+    admin:
+        school: School Admin
+        node: ADMIN
     reports:
         title: Reports
     campus:
@@ -134,6 +145,9 @@ menu:
         list: User List
         self:
             manage: Current User
+    year:
+        calendar:
+            display: Display School Calendar
 ajax:
     wait_message: saving data.. please wait.. 
 Security: Security
@@ -191,3 +205,7 @@ symfony:
     problems: Symfony Problems
 email:
     send: Send Email
+section:
+    header:
+        years_days_times: 'Years, Days & Times'
+        groupings: Groupings
