--- a/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -148,6 +148,7 @@ menu:
     year:
         calendar:
             display: Display School Calendar
+        manage: Manage School Years
 ajax:
     wait_message: saving data.. please wait.. 
 Security: Security
