Section Menu add Hidden Items, add System Admin
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -116,6 +116,7 @@ menu:
     admin:
         school: School Admin
         node: ADMIN
+        system: System Admin
     reports:
         title: Reports
     campus:
