Added People User Bundle
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -119,3 +119,6 @@ school:
                 error: The start time must be before the finish time.
             finish:
                 error: The finish time must be before the close time.
+setting:
+    choice:
+        invalid: The choice is not valid.
