House Management Image Uploader changes
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -129,6 +129,8 @@ menu:
         manage: Campus Manage
     facility:
         manage: Facilities
+        department:
+            edit: Manage Departments
     curriculum: Curriculum
     calendar:
         manage: Manage Calendars
