--- a/src/Busybee/Facility/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/Facility/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -137,9 +137,16 @@ department:
         name:
             placeholder: Select a Course
         member: '%name%'
-    staff:
+    member:
+        add: Add Staff
+        remove:
+            button: Remove Staff
+            success: The staff member was removed.
+            failure: The staff member was not remomoved from the database.
+            missing: The staff member was not found to remove.
+    members:
         title: Staff Information
-        help: Link the department tot the selected staff members.
+        help: Link the department to the selected staff members.
         member:
             name: '%name%'
             placeholder: 'Select a Staff Member'
@@ -149,11 +156,6 @@ department:
             label: Staff Type
             placeholder: Select Staff Type
             help: Staff type is used to set system security.
-        remove:
-            button: Remove Staff
-            success: The staff member was removed.
-            failure: The staff member was not remomoved from the database.
-            missing: The staff member was not found to remove.
     blurb:
         label: Department Blurb
     logo:
