Work on Image Type
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -7,6 +7,9 @@ twig:
 person:
     error:
         phone: Not a valid phone number.
+    validator:
+        email:
+            unique: 'The email %string% already exists in the database.'
 campus:
     error:
         institute:
