--- a/src/Busybee/Core/CalendarBundle/Resources/translations/BusybeeCalendarBundle.en_GB.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/translations/BusybeeCalendarBundle.en_GB.yml
@@ -154,7 +154,6 @@ grade:
         grade: Select a Grade
         year: Select a Year
     label:
-        grade: Select a School Grade
         year: Select a School Year
     edit:
         title: Manage Grade
@@ -168,3 +167,34 @@ grade:
         description: 'Limit the testing of grades in the timetable.'
         label: 'Monitor %grade%'
         toggle: 'Toggle monitor grade.'
+    manage:
+        title: 'Manage Grade Groups'
+        description: 'Manage the grade groups for the current year. To manage grades in another year switch your current year in your user settings.'
+    name:
+        sort: Sort by Grade Name
+        label: Name
+        select: Select a School Grade
+    sequence:
+        sort: Sort by Sequence
+    grade:
+        label: Short Name
+    tutor:
+        list:
+            label: Tutors
+        placeholder: Select a Tutor
+    space:
+        label: Space
+        placeholder: Select a Space
+    website:
+        label: Web Site
+    actions:
+        label: Actions
+    header:
+        label: Manage Grade Details
+        description: ''
+    tutor1:
+        label: Tutor
+    tutor2:
+        label: Tutor (2)
+    tutor3:
+        label: Tutor (3)
