Student CalendarGroup Manage Mk II
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/StudentBundle/Resources/translations/BusybeeStudentBundle.en_GB.yml
+++ b/src/Busybee/People/StudentBundle/Resources/translations/BusybeeStudentBundle.en_GB.yml
@@ -116,3 +116,8 @@ calendar:
                 success: 'The student %name% was removed from the calendar group.'
         manage:
             label: Edit Calendar Group
+        loading:
+            label: 'Working on your student drop'
+        transfer:
+            label: Transfer
+            keep: Ignore
