--- a/src/Busybee/Core/CalendarBundle/Resources/translations/BusybeeCalendarBundle.en_GB.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/translations/BusybeeCalendarBundle.en_GB.yml
@@ -84,6 +84,7 @@ calendar:
         nameshort:
             label: Group Name
             placeholder: Select a Group
+            unique: The name of the year must be unique for this year.
         add:
             title: Group Details
         placeholder:
