Student CalendarGroup Manage Mk IV
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -26,6 +26,8 @@ calendar:
             unique: The name of the year must be unique for this year.
         sequence:
             unique: The internal sequence number is duplicated.
+        yeartutor:
+            unique: 'The Year Tutor %{name} is not unique in the year.'
 caregiver:
     blank:
         family: The family for a caregiver must not be blank.
